[package]
name = "fungible-token-contract"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
stellar-tokens = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
